[package]
name = "volund"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
cgmath = "0.18.0"
image = "0.25.6"
log = "0.4.27"
png = "0.17.16"
pretty_env_logger = "0.5.0"
thiserror = "2.0.12"
tobj = { version = "4.0.3", features = ["log"] }
vulkanalia = { version = "0.28.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"